--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Burger App</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 <body>
 
@@ -15,11 +15,14 @@
         <div class="panel-body">
           
           <div class="row">
-            <div class="col-sm-6">
-              <img src='http://a3.files.maxim.com/image/upload/c_fit,cs_srgb,dpr_1.0,q_80,w_620/MTM1MTQzMzc5MzUyNTI0MDUw.jpg' alt='No Image' height='250px' width='250px'>
+            <div class="col-sm-4">
+              <img src='./assets/img/burger2.jpg' alt='No Image' class="images">
             </div>
-            <div class="col-sm-6">
-              <img src='http://s3.amazonaws.com/etntmedia/media/images/ext/577273183/FRIDAYS-SMOKE-STACKED-BURGER.jpg' alt='No Image' height='250px' width='250px'>
+            <div class="col-sm-4">
+              <img src='./assets/img/burger1.jpg' alt='No Image' class="images">
+            </div>
+             <div class="col-sm-4">
+              <img src='./assets/img/burger1.jpg' alt='No Image' class="images">
             </div>
           </div>
 
