--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
       <div class="panel-heading"><h4>Burger Choices</h4></div>
         <div class="panel-body">
 
-          <div class="row1">
+          <div class="row">
 
             <div class="col-md-7" style='text-align: left;'>
 
