--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,31 +4,27 @@
   <meta charset="UTF-8">
   <title>Burger App</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Thambi" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
 
   <div class="jumbotron">
 
-    <div class="panel panel-default panel-primary text-center">
-      <div class="panel-heading"><h3>Can I Haz Burga?</h3></div>
-        <div class="panel-body">
-          
-          <div class="row">
-            <div class="col-sm-4">
-              <img src='./assets/img/burger2.jpg' alt='No Image' class="images">
-            </div>
-            <div class="col-sm-4">
-              <img src='./assets/img/burger1.jpg' alt='No Image' class="images">
-            </div>
-             <div class="col-sm-4">
-              <img src='./assets/img/burger1.jpg' alt='No Image' class="images">
-            </div>
-          </div>
-
-        </div>
+    <div class="row">
+      <h1>Can I Haz Burga?</h1>
     </div>
-    
+
+    {{!-- <div class="row">
+      <div class="col-sm-4 col-md-offset-2">
+        <img src='./assets/img/burger2.jpg' class="img-responsive" alt='No Image'>
+      </div>
+     
+       <div class="col-sm-4">
+        <img src='./assets/img/burger1.jpg' class="img-responsive" alt='No Image'>
+      </div>
+    </div>  --}} 
+
   </div>
 
   <div class="container">
