--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,42 +4,23 @@
   <meta charset="UTF-8">
   <title>Burger App</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Thambi" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Thambi|Indie+Flower" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
 
   <div class="jumbotron">
-
     <div class="row">
-      <h1>Can I Haz Burga?</h1>
+      <h2>Can I Haz Burga?</h2>
     </div>
-
-    {{!-- <div class="row">
-      <div class="col-sm-4 col-md-offset-2">
-        <img src='./assets/img/burger2.jpg' class="img-responsive" alt='No Image'>
-      </div>
-     
-       <div class="col-sm-4">
-        <img src='./assets/img/burger1.jpg' class="img-responsive" alt='No Image'>
-      </div>
-    </div>  --}} 
-
   </div>
 
   <div class="container">
     {{{body}}}
   </div>
 
-  <div class="footer">
-
-    <h3>Links</h3>
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <p><a class="" href="https://github.com/muhammeta7/burger">Github Repo</a></p>
-      </div>
-    <div class="panel-footer text-center">© 2016 Copyright Muhammet Aydin</div>
-
+  <div class="footer well">
+    <p>© 2016 Copyright Muhammet Aydin</p>
   </div>
      
 </body>
