--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,8 +19,8 @@
     {{{body}}}
   </div>
 
-  <div class="footer well">
-    <p>© 2016 Copyright Muhammet Aydin</p>
+  <div class="navbar navbar-default navbar-fixed-bottom">
+    <p class="copyright">© 2016 Copyright Muhammet Aydin</p>
   </div>
      
 </body>
