Created partials for for footer and navbar

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,20 +9,14 @@
 </head>
 <body>
 
-  <div class="jumbotron">
-    <div class="row">
-      <h2>Can I Haz Burga?</h2>
-    </div>
-  </div>
-
+  {{> navbar}}
+ 
   <div class="container">
     {{{body}}}
   </div>
 
-  <div class="navbar navbar-default navbar-fixed-bottom">
-    <p class="copyright">© 2016 Copyright Muhammet Aydin</p>
-  </div>
-     
+  {{> footer}}
+  
 </body>
 </html>
 
