fixed form portion and made responsive

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,26 +1,6 @@
 <div class="row">
-  <div class="col-md-12">
-    <div class="panel panel-primary text-center">
-      <div class="panel-heading"><h4>Create a New Burger</h4></div>
-        <div class="panel-body">
 
-          <form class="create-update-form" action="burgers/create" method="POST">
-            <div class="form-group">
-              <label for="burgerName">Burger Name: </label>
-              <input type="text" id="burgerName" name="burgerName">
-              <button type="submit"  class="btn btn-lg btn-success">Create Burger!</button>
-            </div>
-          </form>
-
-        </div>
-    </div>
-  </div>
-</div>
-
-
-<div class="row">
-
-  <div class="col-sm-6">
+  <div class="col-sm-6 col-xs-12">
 
     <div class="panel panel-primary text-center">
       <div class="panel-heading"><h4>Burger Choices</h4></div>
@@ -56,7 +36,7 @@
 
  
 
-  <div class="col-sm-6">
+  <div class="col-sm-6 col-xs-12">
 
     <div class="panel panel-primary text-center">
       <div class="panel-heading"><h4>Burgers Devoured!</h4></div>
@@ -72,6 +52,25 @@
     </div>
   </div>
 
+</div>
+
+<div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-6 col-xs-12">
+    <div class="panel panel-primary text-center">
+      <div class="panel-heading"><h4>Create a New Burger</h4></div>
+        <div class="panel-body">
+          <form class="create-update-form" action="burgers/create" method="POST">
+            <div class="form-group">
+              <label for="burgerName">Burger Name</label>
+              <textarea id="burgerName" name="burgerName" class="form-control" columns="10" rows="3"> </textarea>
+              <button type="submit"  class="btn btn-success" id="createButton">Create Burger!</button>
+            </div>
+          </form>
+        </div>
+    </div>
+  </div>
+  <div class="col-md-3"></div>
 </div>
 
 
