--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -15,16 +15,23 @@ body {
 }
 
 
+#createButton {
+  margin-top: 20px;
+}
+
+label {
+  font-size: 24px;
+}
 
 p {
-  font-size: 24px;
+  font-size: 16px;
 }
 
 h3 {
   text-align: center;
 }
 
-h4{
+h4 {
   font-family: 'Baloo Thambi', cursive;
   font-size: 24px;
 }
