burger app completed for now

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -44,7 +44,7 @@
           
           {{#each burgerList}}
             {{#if this.devoured}}
-                <p>Burger Name: {{this.burgerName}}</p>
+                <p>{{this.burgerName}}</p>
             {{/if}}
           {{/each}}
           
