--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,6 +14,17 @@ body {
   font-size: 48px;
 }
 
+.navbar-default {
+  padding: 15px;
+  background-color: pink;
+}
+
+
+.navbar-header {
+    text-align: center;
+    width: 100%;
+}
+
 /* Form */
 #createButton {
   margin-top: 20px;
@@ -39,5 +50,5 @@ h4 {
 
 .copyright {
   text-align: center;
-  padding-top: 20px;
+  padding: 10px;
 }
